fix(java): fix all the things to get java running